updated example secrets find

--- a/source/secrets.json.example
+++ b/source/secrets.json.example
@@ -1,21 +1,33 @@
 {
     "beacon": {
-        "aa:bb:cc:dd:ee:ff": {
+        "xx:xx:xx:xx:xx:xx": {
             "enabled": true,
-            "name": "iPhone",
-            "output": [
-                "twinkle lights",
-                "desk light",
-                "blue LED"
+            "name": "phone"
+        },
+        "yy:yy:yy:yy:yy:yy": {
+            "enabled": true,
+            "name": "laptop"
+        }
+    },
+    "mapping": {
+        "home": {
+            "phone": [
+                "blue LED",
+                "desk light"
+            ],
+            "laptop": [
+                "blue LED",
+                "desk light"
             ]
         },
-        "11:22:33:44:55:66": {
-            "enabled": true,
-            "name": "laptop",
-            "output": [
-                "twinkle lights",
-                "desk light",
-                "blue LED"
+        "work": {
+            "phone": [
+                "blue LED",
+                "room lights"
+            ],
+            "laptop": [
+                "blue LED",
+                "room lights"
             ]
         }
     },
@@ -24,32 +36,38 @@
             "enabled": true,
             "name": "LED",
             "pin": "D2",
-            "timeout": 900,
+            "timeout": 1800,
             "type": "led"
         },
         "desk light": {
-            "client_id": "aaaaaaaaaaaaaaaaaaaa",
-            "client_secret": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
-            "device_id": "cccccccccccccccccccccc",
+            "client_id": "********************",
+            "client_secret": "********************************",
+            "device_id": "**********************",
             "enabled": true,
             "name": "switch_1",
             "server": "https://openapi.tuyaus.com",
-            "timeout": 900,
+            "timeout": 1800,
             "type": "tuya"
         },
-        "twinkle lights": {
-            "client_id": "dddddddddddddddddddd",
-            "client_secret": "eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
-            "device_id": "ffffffffffffffffffff",
+        "room lights": {
+            "client_id": "********************",
+            "client_secret": "********************************",
+            "device_id": "********************",
             "enabled": true,
             "name": "switch_1",
             "server": "https://openapi.tuyaus.com",
-            "timeout": 900,
+            "timeout": 1800,
             "type": "tuya"
         }
     },
     "wifi": {
-        "hotspot1": "xxxxxxxxxxxxx",
-        "hotspot2": "yyyyyyyyyyyyy"
+        "workssid": {
+            "location": "work",
+            "password": "************"
+        },
+        "homessid": {
+            "location": "home",
+            "password": "************"
+        }
     }
 }
